enhanced Orders unit tests